--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
 
   <meta charset="UTF-8">
+  <title>DST</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="http://facebook.github.io/react/favicon.ico">
 
@@ -17,7 +19,7 @@
 
     </div>
 
-  <script src="build/index.js"></script>
+  <script src="index.js"></script>
 
 </body>
 
